Fix permissions for display controller run file / fix configuration loading issue  and update version to 0.2.9

--- a/oled-i2c-screen-adapter/Dockerfile
+++ b/oled-i2c-screen-adapter/Dockerfile
@@ -24,3 +24,6 @@ COPY display_controller.py /display_controller.py
 
 # Copier les fichiers de configuration du service
 COPY rootfs/ /
+
+#here we give execution rights to the run file
+RUN chmod +x /etc/services.d/display_controller/run
