--- a/oled-i2c-screen-adapter/Dockerfile
+++ b/oled-i2c-screen-adapter/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILD_FROM=ghcr.io/home-assistant/aarch64-base:stable
 FROM $BUILD_FROM
 
-# Installer les dépendances système et Python nécessaires
+# Installing dependencies for building Python packages
 RUN apk add --no-cache \
     python3 \
     py3-pip \
@@ -15,15 +15,15 @@ RUN apk add --no-cache \
     bash \
     jq
 
-# Installer les dépendances Python
+# Installing Python dependencies
 COPY requirements.txt /requirements.txt
 RUN pip3 install --break-system-packages -r /requirements.txt
 RUN apk add --no-cache jq
-# Copier le script principal Python
+# Copy the main Python script
 COPY display_controller.py /display_controller.py
 
-# Copier les fichiers de configuration du service
+# Copy the service configuration files
 COPY rootfs/ /
 
-#here we give execution rights to the run file
+# Here we give execution rights to the run file
 RUN chmod +x /etc/services.d/display_controller/run
