Enhance display controller with customizable font size, header visibility, and dynamic custom lines support
optimisation

adding brightness feature

adding a full custom pannel

cleaning logs

--- a/oled-i2c-screen-adapter/Dockerfile
+++ b/oled-i2c-screen-adapter/Dockerfile
@@ -13,7 +13,8 @@ RUN apk add --no-cache \
     linux-headers \
     libjpeg \
     bash \
-    jq
+    jq \
+    ttf-dejavu
 
 # Installing Python dependencies
 COPY requirements.txt /requirements.txt
