--- a/oled-i2c-screen-adapter/config.json
+++ b/oled-i2c-screen-adapter/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Add-on OLED I2C Screen Adapter",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "init": false,
   "slug": "oled-i2c-screen-adapter",
   "description": "This Home Assistant add-on enables the use of an OLED screen via I2C on a Raspberry Pi running Home Assistant Operating System (HA OS). HA OS typically restricts direct access to I2C due to system permissions, but this add-on bypasses those limitations by leveraging the Supervisor.",
@@ -29,6 +29,7 @@
     "display_type": "ssd1306",
     "refresh_interval": 5,
     "default_brightness": 255,
+    "default_mode": "text",
     "font_size": 10,
     "show_header": true,
     "qr_link": "http://homeassistant.local:8123/",
@@ -60,6 +61,7 @@
     "display_type": "list(ssd1306|sh1106)",
     "refresh_interval": "int(1,60)",
     "default_brightness": "int(0,255)",
+    "default_mode": "list(auto|system|network|qr|custom|off)",
     "font_size": "int(8,20)",
     "show_header": "bool",
     "qr_link": "str",
