--- a/oled-i2c-screen-adapter/config.json
+++ b/oled-i2c-screen-adapter/config.json
@@ -29,7 +29,7 @@
     "display_type": "ssd1306",
     "refresh_interval": 5,
     "default_brightness": 255,
-    "default_mode": "text",
+    "default_mode": "auto",
     "font_size": 10,
     "show_header": true,
     "qr_link": "http://homeassistant.local:8123/",
